@@ -3,6 +3,8 @@ http://couchdb-python.googlecode.com/svn/tags/0.4.0
 (?, from branches/0.4.x)
 
  * Add command-line scripts for importing/exporting databases.
+ * The `Database.update()` function will now actually perform the `POST`
+   request even when you do not iterate over the results (issue 5).
 
 
 Version 0.3
